# star-wars-characters

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.envs/: .fastapi  .postgres
.github/workflows/: cicd.yml
.ipython/profile_default/: ipython_config.py
db/: env.py
db/versions/: 1d817350e9c2_add_characters_default_timestampts_.py  1f55dc598483_initial_migrations.py  201486222f60_starship_model.py  54e5acfb1f78_initial_table_creation.py  57f39a766cd4_optional_film_fields.py  8ee91e1caaf0_nullable_fields_in_starship_model.py  9e9d60dd0528_film_model.py  a5d1feee2481_user_model.py  b14559c981d4_optional_film_fields.py  ba49ec3c07a7_character_remove_datetimes.py  ca15a848f786_.py  d890a03306df_add_url_in_character_model.py  dc2e28913fcd_add_characters_table.py  f254dbf77881_celery_installation.py  f798c1bb9445_voting_model.py
scripts/: migrate  start  start-celerybeat  start-celeryworker
src/: __init__.py  application.py  celery_app.py  depends.py  exceptions.py  main.py  models.py  repository.py  routers.py  service.py  settings.py  shell_plus.py  test_base.py  test_router_base.py  version.py
src/characters/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  test_service.py
src/characters/tests/integration/: test_character_router.py  test_character_service.py  test_repository.py  test_router.py
src/films/: models.py  repository.py  router.py  schemas.py  service.py
src/films/tests/integration/: test_film_router.py  test_film_service.py
src/integrations/: api.py  crontabs.py  tasks.py
src/integrations/swapi/: plugin.py
src/integrations/swapi/tests/unit/: test_swapi_plugin.py
src/starships/: models.py  repository.py  router.py  schemas.py  service.py
src/starships/tests/integration/: test_starship_router.py  test_starships_service.py
src/tests/: test_routers.py
src/users/: constants.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/utils/: jwt.py  password.py  schemas.py  session.py
src/utils/tests/: test_jwt.py  test_password.py
src/votes/: model.py  repository.py  router.py  schemas.py  service.py
