[project]
name = "star-wars-characters"
version = "0.1.0"
description = "Star Wars Characters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "environs>=14.3.0",
    "fastapi[standard]>=0.116.1",
    "jwt[crypto]>=1.4.0",
    "passlib[crypto]>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.43",
]

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "pre-commit>=4.3.0",
    "traitlets>=5.14.3",
]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "conftest.py"]
testpaths = [
    "tests",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Black-compatible line length; Ruff formatter honors this too.
line-length = 88
# Match your project’s runtime; adjust if you target another version.
target-version = "py310"

# Optional: ignore typical non-source dirs (tweak as needed)
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "alembic",
]

[tool.ruff.lint]
extend-select = ["I"]
