[project]
name = "star-wars-characters"
version = "0.1.0"
description = "Star Wars Characters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "celery>=5.5.3",
    "environs>=14.3.0",
    "fastapi[standard]>=0.116.1",
    "passlib[crypto]>=1.7.4",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.43",
    "yarl>=1.20.1",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "async-factory-boy>=1.0.1",
    "factory-boy>=3.3.3",
    "faker>=37.8.0",
    "httpx>=0.28.1",
    "ipython>=8.37.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "traitlets>=5.14.3",
]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "conftest.py"]
testpaths = [
    "tests",
    "src/tests",
    "src/*/tests",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Black-compatible line length
line-length = 88
# Match your project’s runtime
target-version = "py310"

exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "alembic",
]

[tool.ruff.lint]
select = ["F", "I"] # F = pyflakes, I = isort

[tool.coverage.run]
omit = ["*tests*", "*developer_tools*"]
concurrency = ["greenlet", "thread"]
include = ["/app/src/*", ]

[tool.coverage.report]
precision = 2
